fix(button): icon and loading spacing and size

--- a/elements/pfe-button/pfe-button.scss
+++ b/elements/pfe-button/pfe-button.scss
@@ -109,22 +109,19 @@
 :host([icon-position=right][loading]) [part=icon] {
   display: inline-flex;
   align-items: center;
-  z-index: 1;
   position: absolute;
-  aspect-ratio: 1/1;
-  width: 32px;
-  right: -8px;
+  width: 16px;
   left: initial;
+  right: var(--pf-c-button--PaddingRight,
+    var(--pf-global--spacer--md, 1rem));
   margin-inline-start: var(--pf-c-button__icon--m-start--MarginLeft,
     var(--pf-global--spacer--xs, 0.25rem));
+  margin-inline-end: initial;
 }
 
-:host([icon-position=right]) .hasIcon ::slotted(button),
-:host([icon-position=right][loading]) ::slotted(button) {
-  --pf-c-button--PaddingLeft: initial;
-  --pf-c-button--PaddingRight: 36px;
-  position: absolute;
-  inset: 0;
+:host([icon-position=right]) .hasIcon ::slotted(button) {
+  padding-left: var(--pf-c-button--PaddingLeft, var(--pf-global--spacer--md, 1rem)) !important;
+  padding-right: calc(16px + 8px + var(--pf-c-button--PaddingRight, var(--pf-global--spacer--md, 1rem))) !important;
 }
 
 /******************************
@@ -157,6 +154,7 @@
 
 pfe-progress-indicator {
   --pfe-progress-indicator-size: 18px;
+  --pfe-theme--surface--border-width--heavy: 2px;
 }
 
 :host([loading]) {
@@ -170,9 +168,16 @@ pfe-progress-indicator {
   --pfe-progress-indicator--foreground-color: rgba(255, 255, 255, .75);
 }
 
-:host([loading]) ::slotted(button) {
-  --pf-c-button--PaddingLeft: 48px;
-  position: absolute;
-  inset: 0;
+:host([loading]:not([plain])) {
+  --pf-c-button--PaddingRight: var(--pf-c-button--m-in-progress--PaddingRight,
+    var(--pf-global--spacer--md, 1rem));
+  --pf-c-button--PaddingLeft: var(--pf-c-button--m-in-progress--PaddingLeft,
+    calc(
+      var(--pf-global--spacer--md, 1rem) + var(--pf-c-button__progress--width,
+        calc(var(--pf-global--icon--FontSize--md, 1.125rem) + var(--pf-global--spacer--sm, 0.5rem))) / 2));
+}
+
+:host([loading]:not([plain])) ::slotted(button) {
+  padding-left: calc(12px + var(--pf-c-button--PaddingLeft, var(--pf-global--spacer--md, 1rem))) !important;
 }
 
